# Swarm-Simulation

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_experiment.py
configs/: default.yaml
configs/experiments/: conversational_schelling.yaml  propaganda_counterfactual.yaml  propaganda_influence.yaml  propaganda_quick.yaml  propaganda_quick_counterfactual.yaml  quick_test.yaml  schelling_segregation.yaml  three_group_schelling.yaml  wisdom_of_crowds.yaml
docs/: THEORY_GUIDE.md
src/swarm/: __init__.py  __main__.py
src/swarm/agents/: __init__.py  base.py  communication.py  default_domain.py  domain.py  persona.py  prompts.py  scheduler.py  society.py  state.py  toolkit.py  topology.py
src/swarm/dashboard/: __init__.py  app.py  data_loader.py
src/swarm/dashboard/static/: dashboard.js  index.html  style.css
src/swarm/examples/: __init__.py
src/swarm/graph/: __init__.py  base.py  ingestion.py  networkx_backend.py  ontology.py  prompts.py  similarity.py
src/swarm/llm/: __init__.py  base.py  factory.py  fallback.py  gemini_provider.py  ollama_provider.py
src/swarm/simulation/: __init__.py  emergence.py  engine.py  hashing.py  intervention.py  logger.py  report.py  runner.py
